--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="box3 boxex"></div>
     </div>
     <div class="scoreBoard">
-        Score:0
+        LEVEL:0
     </div>
 </body>
 
